// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Game displays a cat's game 1`] = `
<div
  class="game"
>
  <div
    class="game-board"
  >
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        X
      </button>
      <button
        class="square"
      >
        O
      </button>
      <button
        class="square"
      >
        X
      </button>
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        X
      </button>
      <button
        class="square"
      >
        O
      </button>
      <button
        class="square"
      >
        X
      </button>
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      >
        O
      </button>
      <button
        class="square"
      >
        X
      </button>
      <button
        class="square"
      >
        O
      </button>
    </div>
  </div>
  <div
    class="game-info"
  >
    <div
      id="status"
    >
      Cat's Game
    </div>
    <ol>
      <li
        class="moves"
      >
        <button>
          Game Start
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #1
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #2
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #3
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #4
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #5
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #6
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #7
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #8
        </button>
      </li>
      <li
        class="moves"
      >
        <button>
          Move #9
        </button>
      </li>
    </ol>
  </div>
</div>
`;

exports[`Game displays a new game 1`] = `
<div
  class="game"
>
  <div
    class="game-board"
  >
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
    <div
      class="board-row"
    >
      <button
        class="square"
      />
      <button
        class="square"
      />
      <button
        class="square"
      />
    </div>
  </div>
  <div
    class="game-info"
  >
    <div
      id="status"
    >
      Next player: X
    </div>
    <ol>
      <li
        class="moves"
      >
        <button>
          Game Start
        </button>
      </li>
    </ol>
  </div>
</div>
`;
